--- a/resources/quake.desktop
+++ b/resources/quake.desktop
@@ -5,7 +5,7 @@ GenericName=quake
 Comment=ezQuake
 Keywords=qtv,qw://;
 Categories=quakeworld;qtv;Game;
-Exec=/quake/ezquake-linux-x86_64
+Exec=/quake/ezquake-linux-x86_64 +qwurl %u
 Path=/quake
 MimeType=x-scheme-handler/qw
 Terminal=false
