move quake dir into /root, leave git/build utils alone and add alias to pull and rebuild from git

--- a/resources/quake.desktop
+++ b/resources/quake.desktop
@@ -5,8 +5,8 @@ GenericName=quake
 Comment=ezQuake
 Keywords=qtv,qw://;
 Categories=quakeworld;qtv;Game;
-Exec=/quake/ezquake-linux-x86_64 +qwurl %u
-Path=/quake
+Exec=/root/quake/ezquake-linux-x86_64 +qwurl %u
+Path=/root/quake
 MimeType=x-scheme-handler/qw
 Terminal=false
 StartupNotify=false
