--- a/resources/quake.desktop
+++ b/resources/quake.desktop
@@ -5,8 +5,8 @@ GenericName=quake
 Comment=ezQuake
 Keywords=qtv,qw://;
 Categories=quakeworld;qtv;Game;
-Exec=/root/quake/ezquake-linux-x86_64 +qwurl %u
-Path=/root/quake
+Exec=/home/quakeuser/quake/ezquake-linux-x86_64 +qwurl %u
+Path=/home/quakeuser/quake
 MimeType=x-scheme-handler/qw
 Terminal=false
 StartupNotify=false
