added notice for execing config

--- a/quake-base/qw.ciscon/autoexec.cfg
+++ b/quake-base/qw.ciscon/autoexec.cfg
@@ -1,2 +1,7 @@
+cl_onload ""
+echo ""
+echo ""
+echo "^N^O^T^I^C^E^:"
 echo "to use ciscon's hud, exec his config:"
 echo "/exec configs/ciscon.cfg"
+echo ""
