--- a/quake-base/qw.ciscon/autoexec.cfg
+++ b/quake-base/qw.ciscon/autoexec.cfg
@@ -2,6 +2,8 @@ cl_onload ""
 echo ""
 echo ""
 echo "^N^O^T^I^C^E^:"
-echo "to use ciscon's hud, exec his config:"
-echo "/exec configs/ciscon.cfg"
+echo "to use ciscon's hud, load his hud config:"
+echo "/cfg_load ciscon_hud"
+echo "or to try out the complete config:"
+echo "/cfg_load ciscon"
 echo ""
