add afterquake/fte fix some mount options

--- a/quake-base/ezquake/configs/config.cfg
+++ b/quake-base/ezquake/configs/config.cfg
@@ -1,6 +1,7 @@
 vid_renderer 1
 r_dynamic 2
 vid_displayfrequency 999
+rate 100000
 sb_sourceunmarkall                                                                                                    
 sb_sourcemark "QuakeServers URL"
 sb_sourcemark "QuakeServers.net"
