support building on debian unstable

--- a/lvm/lvm.conf
+++ b/lvm/lvm.conf
@@ -1,3 +1,13 @@
 devices {
-	filter = [ "r|loop|", "a|/dev/disk/.*|", "r|loop|", "r|.*dev/loop.*|" ]
+  filter = [ "r|loop|", "a|/dev/disk/.*|", "r|loop|", "r|.*dev/loop.*|" ]
+}
+
+config {
+  abort_on_errors = 0
+}
+
+log {
+  verbose = 0
+    silent = 0
+    level = 7
 }
