--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -1,32 +1,28 @@
-name: Create Release
+name: Publish
 
 on:
-	push:
-		tags:
-			- 'release*' # Push events to matching release*, i.e. release-1.0, release-20.15.10, release-2020-10-28-10-26-15
-
+  push:
+    tags:
+      - '*'
 
 jobs:
-	build:
-		name: Create Release
-	runs-on: ubuntu-latest
-	steps:
-		- name: Checkout code
-			uses: actions/checkout@v2
-			with:
-				fetch-depth: 0
-		- name: "Get latest tag"
-			id: latest_tag
-			run: echo "::set-output name=name::$(git tag --sort=-creatordate | head -1)"
-		- name: "Install deps"
+  build:
+    name: Publish Image
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+		- name: Install deps
 			run: sudo apt-get install debootstrap chroot truncate pigz fdisk kpartx losetup uuid-runtime lvm2
-		- name: "Build"
+		- name: Build
 			run: |
         rm -f ./*.zip
 			  bash ./create_image.sh
-		- name: Release
-			uses: softprops/action-gh-release@v1
-			with:
-				files: *.zip
-			env:
-				GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        files: *.zip
+        asset_name: quake-bootable
+        tag: ${{ github.ref }}
+        overwrite: true
