--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -18,11 +18,12 @@ jobs:
       run: |
         rm -f ./*.zip
         bash ./create_image.sh
+        KMSDRM=1 bash ./create_image.sh
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: quake_bootable*.zip
+        file: ./output
         asset_name: quake-bootable
         tag: ${{ github.ref }}
         overwrite: true
