--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -27,7 +27,7 @@ jobs:
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ./output
-        asset_name: quake-bootable
+        file_glob: true
+        file: ./output/*
         tag: ${{ github.ref }}
         overwrite: true
