install lxpolkit after systemd has been purged

--- a/resources/applications/Discord.desktop
+++ b/resources/applications/Discord.desktop
@@ -4,7 +4,7 @@ Name=Discord
 GenericName=discord
 Comment=Discord Chat
 Keywords=discord,chat
-Categories=Game;Chat;InstantMessaging
+Categories=Game;Chat;InstantMessaging;Network
 Exec=/usr/local/bin/discord
 Terminal=false
 StartupNotify=true
