--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -1,13 +1,11 @@
-name: Publish
+name: BuildAndPublish
 
 on:
-  push:
-    tags:
-      - '*'
+  [push]
 
 jobs:
   build:
-    name: Publish Image
+    name: Build and Publish Image
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -33,6 +31,7 @@ jobs:
         rm -f ./*.zip
         bash ./create_image.sh
     - name: Upload binaries to release
+      if: startsWith(github.ref, 'refs/tags/v')
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
