--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -25,7 +25,7 @@ jobs:
         r="${r//$'\r'/'%0D'}"
         echo "RELEASE_BODY=$r" >> $GITHUB_OUTPUT
     - name: Install deps
-      run: sudo apt-get install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2
+      run: sudo apt-get -qqy update && sudo apt-get -qqy install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2
     - name: Build
       env:
         KMSDRM: ${{matrix.KMSDRM}}
