--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        KMSDRM: [0,1],
+        BUILDTYPE: ["full","min"],
         BUILDARCH: ["i386","amd64"]
 
     steps:
@@ -29,7 +29,7 @@ jobs:
       run: sudo apt-get -qqy update && sudo apt-get -qqy install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2
     - name: Build
       env:
-        KMSDRM: ${{matrix.KMSDRM}}
+        BUILDTYPE: ${{matrix.BUILDTYPE}}
       run: |
         rm -f ./*.zip
         bash ./create_image.sh
