--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        BUILDTYPE: ["full","min"],
+        BUILDTYPE: ["full","min"]
         BUILDARCH: ["686","amd64"]
 
     steps:
