pass in buildarch

--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Build
       env:
         BUILDTYPE: ${{matrix.BUILDTYPE}}
+        BUILDARCH: ${{matrix.BUILDARCH}}
       run: |
         rm -f ./*.zip
         bash ./create_image.sh
