add git to other arch

--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -77,7 +77,7 @@ jobs:
       with:
         arch: ${{matrix.BUILDARCH}}
         distro: ubuntu_latest
-        run: apt-get -qqy update && apt-get -qqy install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2
+        run: apt-get -qqy update && apt-get -qqy install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2 git
     - uses: uraimo/run-on-arch-action@v2
       name: Build
       id: build_bootable
