--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -81,7 +81,7 @@ jobs:
         arch: ${{matrix.BUILDARCH}}
         distro: ubuntu_latest
         run: |
-          apt-get -qqy update && apt-get -qqy install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2 git
+          apt-get -qqy update && apt-get -qqy install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2 git sudo
           git config --global --add safe.directory $(pwd)
           pwd 
           rm -f ./*.zip
