Revert "disable 32 bit build"
This reverts commit 48c5328d9d63e44ad728e6064a527730b6d6618c.

--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         BUILDTYPE: ["full","min"]
-        BUILDARCH: ["amd64"]
+        BUILDARCH: ["686","amd64"]
     steps:
     - uses: actions/checkout@v3
     - name: Read release.md and use it as a body of new release
