add semi-colon to protocol spec

--- a/resources/applications/ezQuake.desktop
+++ b/resources/applications/ezQuake.desktop
@@ -7,6 +7,6 @@ Keywords=qtv,qw://;
 Categories=quakeworld;qtv;Game;
 Exec=/home/quakeuser/quake/quake +qwurl %u
 Path=/home/quakeuser/quake
-MimeType=x-scheme-handler/qw
+MimeType=x-scheme-handler/qw;
 Terminal=false
 StartupNotify=false
