--- a/.github/workflows/create-for-testing.yml
+++ b/.github/workflows/create-for-testing.yml
@@ -25,7 +25,8 @@ jobs:
         sudo apt-get -qqy update && sudo apt-get -qqy install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2
         bash ./create_image.sh
 				mv *.img bootable.img
-    - uses: actions/upload-artifact@v3
-      with:
-        name: bootable.img
-        path: bootable.img
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+        with:
+          name: bootable.img
+          path: bootable.img
