--- a/.github/workflows/create-for-testing.yml
+++ b/.github/workflows/create-for-testing.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        BUILDTYPE: ["full"]
+        BUILDTYPE: ["min"]
         BUILDARCH: ["amd64"]
     steps:
     - uses: actions/checkout@v3
