simplify nouveau module options

--- a/resources/modprobe.d/nouveau.conf
+++ b/resources/modprobe.d/nouveau.conf
@@ -1,1 +1,1 @@
-options nouveau config=NvClkMode=15,NvMemExec=1,NvBoost=1,NvPmEnableGating=0,ForcePost=1 vram_pushbuf=1 atomic=1
+options nouveau config=NvClkMode=15,NvMemExec=1,NvBoost=1,NvPmEnableGating=0
