--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -10,7 +10,7 @@ jobs:
   build-x86:
     permissions: write-all
     name: Publish Image x86
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         BUILDTYPE: ["full","min"]
