--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -34,6 +34,7 @@ jobs:
       env:
         BUILDTYPE: ${{matrix.BUILDTYPE}}
         BUILDARCH: ${{matrix.BUILDARCH}}
+      shell: bash
       run: |
         apt-get -qqy update && apt-get -qqy install debootstrap coreutils pigz fdisk kpartx mount uuid-runtime lvm2 git
         rm -f ./*.zip
@@ -45,6 +46,7 @@ jobs:
         echo "VERSIONS=$v" >> $GITHUB_OUTPUT
     - name: Compress
       id: compress
+      shell: bash
       run: |
         apt-get -qqy update && apt-get -qqy install zip
         cd ./output
@@ -59,6 +61,7 @@ jobs:
         INITIAL_VERSION: 1.0.0
     - name: Generate versions
       id: versions
+      shell: bash
       run: |
         echo "release=${{ steps.read_release.outputs.RELEASE_BODY }}" >> $GITHUB_OUTPUT
         echo "versions=${{ steps.build_bootable.outputs.VERSIONS }}" >> $GITHUB_OUTPUT
