--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -10,13 +10,13 @@ jobs:
   build-x86:
     permissions: write-all
     name: Publish Image x86
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         BUILDTYPE: ["full","min"]
         BUILDARCH: ["686","amd64"]
     container:
-      image: debian:unstable
+      image: debian:stable
       options: --privileged
     steps:
     - name: Install Packages
