add rules to lvm.conf

--- a/lvm/lvm.conf
+++ b/lvm/lvm.conf
@@ -2,6 +2,10 @@ devices {
   filter = [ "r|loop|", "a|/dev/disk/.*|", "r|loop|", "r|.*dev/loop.*|" ]
 }
 
+activation {
+  udev_sync = 0
+  udev_rules = 0
+}
 config {
   abort_on_errors = 0
 }
