--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -59,7 +59,7 @@ jobs:
         apt-get -qqy update && apt-get -qqy install pigz
         cd ./output
         basename=$(basename -s .img *.img)
-        pigz -r ${basename} *
+        pigz -r ${basename}.zip ${basename}.*
     - name: Bump version and push tag
       id: bump_version
       uses: anothrNick/github-tag-action@1.67.0
