drop 32 bit support, half of it is broken at this point

--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         BUILDTYPE: ["full","min"]
-        BUILDARCH: ["686","amd64"]
+        BUILDARCH: ["amd64"]
     container:
       image: debian:stable
       options: --privileged
