comment out driver preference priorities for now, amdgpu xorg driver seems to be doing a better job as of late

--- a/resources/02-video-driver-pref.conf
+++ b/resources/02-video-driver-pref.conf
@@ -1,11 +1,11 @@
-Section "Module"
-  Load "nvidia"
-  Load "nouveau"
-  Load "intel"
-  Load "radeon"
-  Load "modesetting"
-  Load "amdgpu"
-  Load "ati"
-  Load "fbdev"
-EndSection
+#Section "Module"
+#  Load "nvidia"
+#  Load "nouveau"
+#  Load "intel"
+#  Load "radeon"
+#  Load "modesetting"
+#  Load "amdgpu"
+#  Load "ati"
+#  Load "fbdev"
+#EndSection
 
