--- a/resources/greetd/config.toml
+++ b/resources/greetd/config.toml
@@ -6,6 +6,6 @@ vt = 7
 # The default session, also known as the greeter.
 [default_session]
 
-command = "startx"
+command = "bash -lc startx"
 
 user = "quakeuser"
