--- a/resources/xorg/02-video-driver-pref.conf
+++ b/resources/xorg/02-video-driver-pref.conf
@@ -1,11 +1,10 @@
-Section "Module"
-  Load "nvidia"
-  Load "nouveau"
-  Load "intel"
-  Load "radeon"
-  Load "modesetting"
-  Load "amdgpu"
-  Load "ati"
-  Load "fbdev"
-EndSection
-
+#Section "Module"
+#  Load "nvidia"
+#  Load "nouveau"
+#  Load "intel"
+#  Load "radeon"
+#  Load "modesetting"
+#  Load "amdgpu"
+#  Load "ati"
+#  Load "fbdev"
+#EndSection
