custom xorg options

--- a/resources/xorg/03-custom-options.conf
+++ b/resources/xorg/03-custom-options.conf
@@ -1,4 +1,5 @@
 Section "OutputClass"
-        Identifier "vrr"
+        Identifier "customoptions"
         Option "VariableRefresh" "false"
+        Option "TearFree" "false"
 EndSection
