--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -22,6 +22,7 @@ jobs:
       options: --privileged
       volumes:
         - /dev:/dev
+        - /sys:/sys
     steps:
     - name: Install Packages
       shell: bash
