--- a/.github/workflows/create-release-from-a-tag.yml
+++ b/.github/workflows/create-release-from-a-tag.yml
@@ -29,6 +29,7 @@ jobs:
       shell: bash
       run: |
         apt-get -qqy update && apt-get -qqy install grub2 grub-pc e2fsprogs debootstrap coreutils dosfstools zip pigz fdisk kpartx mount uuid-runtime lvm2 git && git config --global --add safe.directory '*'
+      run: modprobe efivars
     - name: Checkout
       uses: actions/checkout@v4
       with:
